--- a/SavoirInutile/app/src/main/res/layout/messages.xml
+++ b/SavoirInutile/app/src/main/res/layout/messages.xml
@@ -40,7 +40,8 @@
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="100dp"/>
 
 
 </LinearLayout>
